RESOLVED FIXED282156
REGRESSION(285320@main): [GTK][WPE] Crash in SystemSettings::updateSettings
https://bugs.webkit.org/show_bug.cgi?id=282156
Summary REGRESSION(285320@main): [GTK][WPE] Crash in SystemSettings::updateSettings
Patrick Griffis
Reported 2024-10-27 12:32:08 PDT
1 0x7f910cf7397d WTF::HashTableConstIterator<WTF::HashTable<void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*>, (WTF::ShouldValidateKey)0>, void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*> >::checkValidity() const 2 0x7f910cf71f96 WTF::HashTableConstIterator<WTF::HashTable<void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*>, (WTF::ShouldValidateKey)0>, void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*> >::operator++() 3 0x7f910cf704f6 WTF::HashTableIterator<WTF::HashTable<void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*>, (WTF::ShouldValidateKey)0>, void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*> >::operator++() 4 0x7f910cf6e8d2 WTF::HashTableIteratorAdapter<WTF::HashTable<void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*>, (WTF::ShouldValidateKey)0>, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >::operator++() 5 0x7f910cf6c480 WTF::HashTableValuesIterator<WTF::HashTable<void*, WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WTF::Function<void (WebCore::SystemSettingsState const&)> > >, WTF::DefaultHash<void*>, WTF::HashMap<void*, WTF::Function<void (WebCore::SystemSettingsState const&)>, WTF::DefaultHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WTF::Function<void (WebCore::SystemSettingsState const&)> >, WTF::HashTableTraits, (WTF::ShouldValidateKey)0>::KeyValuePairTraits, WTF::HashTraits<void*>, (WTF::ShouldValidateKey)0>, void*, WTF::Function<void (WebCore::SystemSettingsState const&)> >::operator++() 6 0x7f910cf6a23d WebCore::SystemSettings::updateSettings(WebCore::SystemSettingsState const&) 7 0x7f9108179dd3 WebKit::SystemSettingsManager::didChange(WebCore::SystemSettingsState const&) 8 0x7f9108179da4 WebKit::SystemSettingsManager::initialize(WebKit::WebProcessCreationParameters const&) 9 0x7f91079b07cc WebKit::WebProcess::initializeWebProcess(WebKit::WebProcessCreationParameters&&, WTF::CompletionHandler<void (WebCore::ProcessIdentity)>&&)
Attachments
Carlos Garcia Campos
Comment 1 2024-10-28 03:25:07 PDT
EWS
Comment 2 2024-10-28 04:34:25 PDT
Committed 285761@main (1f3ae07b8e51): <https://commits.webkit.org/285761@main> Reviewed commits have been landed. Closing PR #35787 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.