REGRESSION(285320@main): Crash in SystemSettings::updateSettings https://bugs.webkit.org/show_bug.cgi?id=282156

Reviewed by Adrian Perez de Castro.

The problem is that SystemSettings::updateSettings() doesn't allow
changes in the observers HashMap while it's being iterated. This
regressed in 285320@main because now we are properly applying the initial
settings on web process initialization, and RenderTheme singleton is
created from the web process settings observer, which adds its own
observer. We need to use copyToVector when iterating the observers, but
the values are non copyable, so we copy the keys instead and get the
value to call the observer function.

* Source/WebCore/platform/glib/SystemSettings.cpp:
(WebCore::SystemSettings::updateSettings):

Canonical link: https://commits.webkit.org/285761@main